--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,10 @@ li{
 	background-color: rgb(255, 255, 255); 
 	width:95%;
 	margin:20px;	
+	
 }
 .player_two{
+	background-color: rgb(255, 255, 255);
 	width:95%;
 	margin:20px;	
 }
